# contradictionchecker

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  CORPORATE_SETUP.md  README.md  config.example.yml  config.yml  futureplans.md  pyproject.toml
.claude/: settings.json  settings.local.json
.github/workflows/: ci.yml  release.yml
benchmarks/: __init__.py  contradoc_harness.py
benchmarks/claude_projects_baseline/: README.md  __init__.py  harness.py
benchmarks/claude_projects_baseline/prompts/: system.txt  user.txt
benchmarks/definition_eval/: README.md  __init__.py  harness.py  label.py  mine_pairs.py  pairs.jsonl
benchmarks/targeted_eval/: README.md  __init__.py  harness.py  pairs.jsonl
benchmarks/targeted_eval/runs/: baseline_2026-05-16.json  baseline_2026-05-16.md
consistency_checker/: __init__.py  config.py  logging_setup.py  paths.py  pipeline.py
consistency_checker/audit/: eval.py  logger.py  logger.py.tmp.3204.a56f6dc13b99  naming.py  report.py  reviewer.py
consistency_checker/check/: definition_checker.py  definition_judge.py  definition_terms.py  gate.py  llm_judge.py  multi_party_judge.py  nli_checker.py  triangle.py
consistency_checker/check/prompts/: definition_judge_system.txt  definition_judge_user.txt  judge_multi_system.txt  judge_multi_user.txt  judge_system.txt  judge_user.txt
consistency_checker/check/providers/: anthropic.py  base.py  definition_base.py  moonshot.py  openai.py
consistency_checker/cli/: corpus_prompt.py  main.py  warnings.py
consistency_checker/corpus/: chunker.py  junk_filter.py  loader.py  ocr.py
consistency_checker/extract/: atomic_facts.py  quantitative.py  schema.py
consistency_checker/extract/prompts/: atomic_facts.txt  org_identifier_system.txt  org_identifier_user.txt
consistency_checker/index/: assertion_store.py  embedder.py  faiss_store.py
consistency_checker/index/migrations/: 0001_init.sql  0002_audit.sql  0003_multi_party.sql  0004_run_status.sql  0005_multi_party_finding_assertions.sql  0006_run_error.sql  0007_assertion_kind.sql  0008_finding_detector_type.sql  0009_reviewer_verdicts.sql  0010_provider_tracking.sql  0011_ui_redesign_schema.sql  0012_fix_check_constraints.sql  0013_document_org.sql  0014_corpus_isolation.sql  0015_drop_judge_confidence.sql  0016_run_kind.sql
consistency_checker/models/: __init__.py  ui.py
consistency_checker/web/: __init__.py  app.py
consistency_checker/web/api/: __init__.py  corpora.py  runs.py
consistency_checker/web/static/: cc_collapsed.css  cc_style.css  htmx.min.js
consistency_checker/web/templates/: cc__assertion_detail.html  cc__cost_gauge.html  cc__document_detail.html  cc__filter_chips.html  cc__finding_actions.html  cc__multi_party_diff.html  cc__onboarding.html  cc__pagination.html  cc__pair_diff.html  cc__progress_count.html  cc__stats_corpus_banner.html  cc__stats_failed.html  cc__stats_final.html  cc__stats_live.html  cc__upload_success.html  cc__verdict_buttons.html  cc__verdict_toast.html  cc_action_items.html  cc_add_files_modal.html  cc_assertions.html  cc_base.html  cc_contradictions.html  cc_cost_gauge.html  cc_definitions.html  cc_documents.html  cc_drawer.html  cc_findings.html  cc_ingest.html  cc_new_corpus_modal.html  cc_new_run_modal.html  cc_process.html  cc_rename_corpus_modal.html  cc_sidebar.html  cc_single.html  cc_stats.html
docs/: ARCHITECTURE.md  RELEASING.md  benchmarks.md  corporate-setup.md  product-overview.txt  ui-improvement-plan.md
docs/decisions/: 0001-llm-judge-provider.md  0002-embedding-model.md  0003-contradoc-integration.md  0004-pdf-docx-loaders.md  0005-numeric-short-circuit.md  0006-three-doc-conditional.md  0007-web-ui.md  0008-persona-aware-analysis.md  0009-definition-inconsistency-detector.md  0010-moonshot-experimental-judge.md  0011-ui-redesign-workflow-tabs.md  0012-corpus-org-warning.md  0013-corpus-isolation.md  0014-ocr-fallback.md  0015-pairwise-opt-in.md  0016-max-cost-ceiling.md  0017-ui-collapse.md  0018-remove-judge-confidence.md  0019-ingest-as-background-job.md  README.md
docs/plans/: phase0-ui-plan.md  v0.2-build-plan.md  v0.3-block-g.md
docs/superpowers/: README.md
docs/superpowers/plans/: 2026-05-16-kimi-extension-auth-setup.md  2026-05-16-kimi-moonshot-judge-provider.md  2026-05-16-provider-tracking-audit.md  2026-05-16-ui-redesign-implementation.md  2026-05-17-security-remediation.md  2026-05-21-definition-judge-precision.md  2026-05-24-corpus-org-warning.md  2026-05-31-max-cost-ceiling.md  2026-05-31-ocr-fallback.md  2026-05-31-pairwise-opt-in.md  2026-06-01-ui-collapse.md  2026-06-02-definition-detector-eval.md
docs/superpowers/specs/: 2026-05-15-definition-inconsistency-detector-design.md  2026-05-15-reviewer-workflow-design.md  2026-05-16-kimi-moonshot-judge-provider.md  2026-05-16-ui-redesign.md  2026-05-21-canonicalizer-precision-design.md  2026-05-24-corpus-org-warning-design.md  (+1 more)
scripts/: vendor_htmx.py
tests/: conftest.py  test_assertion_store.py  test_atomic_facts.py  test_audit_eval.py  test_audit_logger.py  test_benchmark.py  test_claude_projects_baseline.py  test_cli.py  test_cli_corpus_prompt.py  test_cli_corpus_subcommands.py  test_cli_reidentify.py  test_cli_serve_bind.py  test_cli_warnings.py  test_config.py  test_corpus.py  test_corpus_crud.py  test_corpus_isolation_v1_1.py  test_definition_checker.py  test_definition_e2e_live.py  test_definition_eval_set.py  test_definition_judge.py  test_definition_judge_payload.py  test_definition_terms.py  test_e2e.py  test_embedder.py  test_estimate_cost.py  test_extraction_regression.py  test_faiss_gate_corpus_filter.py  test_gate.py  test_junk_filter.py  test_llm_judge.py  test_memory_guardrails.py  test_migrations.py  test_multi_party_finding.py  test_multi_party_judge.py  test_naming.py  test_nli_checker.py  test_normalize_org.py  test_numeric_short_circuit.py  test_ocr.py  (+25 more)
tests/benchmarks/: test_definition_eval.py
tests/corpus/: test_chunker.py
tests/fixtures/: contradoc_sample.jsonl  expected_report.md  nli_pairs.jsonl
tests/models/: test_ui.py
tests/web/: __init__.py
(+27 files in other folders)
