[project]
name = "consistency-checker"
version = "0.4.0"
description = "Detects internal contradictions across a corpus of documents using a two-stage NLI + LLM pipeline."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "Todd Erickson" }]
keywords = [
    "nli",
    "contradiction-detection",
    "llm",
    "document-analysis",
    "consistency",
    "faiss",
    "deberta",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: Linguistic",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "pysbd>=0.3.4",
    "anthropic>=0.39",
    "openai>=1.50",
    "numpy>=1.26",
    "faiss-cpu>=1.7",
    "sentence-transformers>=3.0",
    "typer>=0.12",
    "unstructured[pdf,docx]>=0.15",
    "fastapi>=0.111",
    "python-multipart>=0.0.9",
    "jinja2>=3.1",
    "uvicorn>=0.30",
    "psutil>=5.9",
]

[project.scripts]
consistency-check = "consistency_checker.cli.main:app"

[project.urls]
Homepage = "https://github.com/toddaerickson/contradictionchecker"
Repository = "https://github.com/toddaerickson/contradictionchecker"
Issues = "https://github.com/toddaerickson/contradictionchecker/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["consistency_checker"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.10",
    "types-PyYAML>=6.0",
    "reportlab>=4.0",
    "python-docx>=1.1",
    "httpx>=0.27",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"consistency_checker/cli/*.py" = ["B008"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["consistency_checker"]

[[tool.mypy.overrides]]
module = [
    "pysbd",
    "pysbd.*",
    "faiss",
    "faiss.*",
    "sentence_transformers",
    "sentence_transformers.*",
    "transformers",
    "transformers.*",
    "unstructured",
    "unstructured.*",
    "reportlab",
    "reportlab.*",
    "docx",
    "docx.*",
    "psutil",
    "psutil.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: tests that download HF models or are otherwise expensive",
    "live: tests that hit external APIs (require API keys)",
    "e2e_fixture: end-to-end tests using fixture LLM (no network)",
]
addopts = "-ra -q --strict-markers"
filterwarnings = [
    "ignore::DeprecationWarning:pysbd.*",
    "ignore:builtin type Swig.*:DeprecationWarning",
]
